--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -21,6 +21,8 @@ jobs:
       # Install dependencies
       - name: Install dependencies
         run: npm install
+      - name: Build app
+        run: npm run build
       # Run tests
       - name: Run tests
         run: npm run test
