--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -31,7 +31,7 @@ jobs:
         run: npm run test
       # Deploy to Render
       - name: Deploy to Render
-        if: github.event_name == 'push'
+        if: ${{ github.event_name == 'push' }}
         uses: sws2apps/render-deployment@main
         with:
           serviceId: ${{ secrets.RENDER_SERVICE_ID }}
