--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -29,6 +29,12 @@ jobs:
       # Run tests
       - name: Run tests
         run: npm run test
+
+      - name: Log github event
+        run: | 
+          echo ${{ github.event_name }}
+          echo ${{ secrets.RENDER_SERVICE_ID }}
+          echo ${{ secrets.RENDER_API_KEY }}
       # Deploy to Render
       - name: Deploy to Render
         if: ${{ github.event_name == 'push' }}
@@ -37,6 +43,4 @@ jobs:
           serviceId: ${{ secrets.RENDER_SERVICE_ID }}
           apiKey: ${{ secrets.RENDER_API_KEY }}
           multipleDeployment: false #optional, default true
-      - name: Log github event
-        run: echo ${{ github.event_name }}
         
