--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -31,10 +31,13 @@ jobs:
         run: npm run test
 
       - name: Log github event
+        env:
+          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
         run: | 
           echo ${{ github.event_name }}
-          echo ${{ secrets.RENDER_SERVICE_ID }}
-          echo ${{ secrets.RENDER_API_KEY }}
+          echo $RENDER_SERVICE_ID
+          echo $RENDER_API_KEY
       # Deploy to Render
       - name: Deploy to Render
         if: ${{ github.event_name == 'push' }}
