--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -21,7 +21,7 @@ jobs:
           cache: npm
           node-version: 16
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
   build: 
     needs: [install-dependencies]
@@ -36,7 +36,7 @@ jobs:
           cache: npm
           node-version: 16
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Build app
         run: npm run build
 
@@ -62,7 +62,7 @@ jobs:
           cache: npm
           node-version: 16
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Run tests
         run: npm run test
 
